--- a/docs/concepts/ServerAPI.dita
+++ b/docs/concepts/ServerAPI.dita
@@ -6,24 +6,25 @@
     <conbody>
         <p>The REST methods that TMEngine's server supports are:</p>
         <ul>
-            <li><xref href="rest/CreateMemory.dita"></xref></li>
-            <li><xref href="rest/ListMemories.dita"></xref></li>
-            <li><xref href="rest/OpenMemory.dita"></xref></li>
-            <li><xref href="rest/CloseMemory.dita"></xref></li>
-            <li><xref href="rest/ImportTMX.dita"></xref></li>
+            <li><xref href="rest/CreateMemory.dita"/></li>
+            <li><xref href="rest/ListMemories.dita"/></li>
+            <li><xref href="rest/OpenMemory.dita"/></li>
+            <li><xref href="rest/CloseMemory.dita"/></li>
+            <li><xref href="rest/ImportTMX.dita"/></li>
             <li><xref href="rest/ProcessStatus.dita"/></li>
-            <li><xref href="rest/ExportTMX.dita"></xref></li>
-            <li><xref href="rest/SearchTranslations.dita"></xref></li>
-            <li><xref href="rest/ConcordanceSearch.dita"></xref></li>
-            <li><xref href="rest/RenameMemory.dita"></xref></li>
-            <li><xref href="rest/DeleteMemory.dita"></xref></li>
-            <li><xref href="rest/StopServer.dita"></xref></li>
+            <li><xref href="rest/ExportTMX.dita"/></li>
+            <li><xref href="rest/SearchTranslations.dita"/></li>
+            <li><xref href="rest/ConcordanceSearch.dita"/></li>
+            <li><xref href="rest/RenameMemory.dita"/></li>
+            <li><xref href="rest/DeleteMemory.dita"/></li>
+            <li><xref href="rest/StopServer.dita"/></li>
         </ul>
-        <p>Default TMEngine URL is '<codeph id="defaultUrl">http://localhost:8000/TMServer/</codeph>'.</p>
+        <p>Default TMEngine URL is '<codeph id="defaultUrl"
+            >http://localhost:8000/TMServer/</codeph>'.</p>
         <note>It is possible to select a custom port for the server, passing the
                 '<codeph>-port</codeph>' parameter to the script used for launching it.</note>
-        <p>All methods return a JSON object with a '<codeph>status</codeph>' field. Applications must
-            watch this field and verify that it is set to '<codeph>OK</codeph>'. </p>
+        <p>All methods return a JSON object with a '<codeph>status</codeph>' field. Applications
+            must watch this field and verify that it is set to '<codeph>OK</codeph>'. </p>
         <p>In case of error, the JSON response includes a field named '<codeph>reason</codeph>' that
             contains the error cause.</p>
     </conbody>
