--- a/docs/concepts/rest/OpenMemory.dita
+++ b/docs/concepts/rest/OpenMemory.dita
@@ -4,7 +4,8 @@
     <title>Open Memory</title>
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
-        <p>Default: <codeph conref="../ServerAPI.dita#ServerAPI/defaultUrl"/><codeph>open</codeph></p>
+        <p>Default: <codeph conref="../ServerAPI.dita#ServerAPI/defaultUrl"
+            /><codeph>open</codeph></p>
         <p>Send a '<codeph>POST</codeph>' request to the method end point with this parameter in a
             JSON body:</p>
         <simpletable>
