--- a/docs/concepts/rest/CreateMemory.dita
+++ b/docs/concepts/rest/CreateMemory.dita
@@ -19,7 +19,8 @@
                 <stentry><apiname>id</apiname></stentry>
                 <stentry>No</stentry>
                 <stentry>
-                    <p>ID of the memory to create. The value of '<codeph>id</codeph>' must be unique.</p>
+                    <p>ID of the memory to create. The value of '<codeph>id</codeph>' must be
+                        unique.</p>
                     <p>Default value is current server time represented as the number of
                         milliseconds since January 1, 1970, 00:00:00 GMT</p>
                 </stentry>
@@ -53,7 +54,8 @@
                 <stentry>No</stentry>
                 <stentry>
                     <p>Name or IP of the server running MySQL or MariaDB.</p>
-                    <p>Required for <codeph>SQLEngine</codeph>. Defaut value: '<codeph>localhost</codeph>'</p>
+                    <p>Required for <codeph>SQLEngine</codeph>. Defaut value:
+                            '<codeph>localhost</codeph>'</p>
                 </stentry>
             </strow>
             <strow>
@@ -61,7 +63,8 @@
                 <stentry>No</stentry>
                 <stentry>
                     <p>Port in which MySQL or MariaDB listens for requests.</p>
-                    <p>Required for <codeph>SQLEngine</codeph>. Default value: <codeph>3306</codeph></p>
+                    <p>Required for <codeph>SQLEngine</codeph>. Default value:
+                        <codeph>3306</codeph></p>
                 </stentry>
             </strow>
             <strow>
