--- a/docs/TMEngine.ditamap
+++ b/docs/TMEngine.ditamap
@@ -5,7 +5,7 @@
   <booktitle>
     <mainbooktitle> TMEngine</mainbooktitle>
     <booktitlealt>An Open Source Translation Memory Manager <image href="images/tmengine.png"
-        placement="break" align="center"/> Copyright (c) 2003 - 2019 Maxprograms </booktitlealt>
+        placement="break" align="center"/> Copyright (c) 2003-2020 Maxprograms </booktitlealt>
   </booktitle>
   <frontmatter>
     <booklists>
